# hexlet-django

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: app.py  companies_data.json  data.py  repository.py  users_data.json  validator.py
src/templates/: base.html  cart.html  index.html
src/templates/courses/: index.html  new.html
src/templates/posts/: edit.html  form.html  index.html  new.html  show.html
src/templates/schools/: edit.html  index.html  show.html
src/templates/users/: edit.html  index.html  new.html  show.html
tests/: test_app.py  test_cart.py  test_courses.py  test_post_create.py  test_post_delete.py  test_post_read.py  test_post_update.py  test_posts.py
