[tool.poetry]
name = "hexlet-flask"
version = "0.1.0"
description = "Example application"
authors = ["Hexlet team <team@hexlet.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
python-dotenv = "^0.18.0"
Faker = "^8.8.2"
Werkzeug = "2.0.3"

[tool.poetry.dev-dependencies]
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
